Added initial html structure

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -2,3 +2,89 @@ extends ./layout.jade
 
 block content
 	.container
+		header
+			h1 Hotel Circus Circus Hotel & Casino Resort
+			p Las Vegas, USA
+			p Aéreo de 7 Cidades + Hotel em Vegas
+
+		ul
+			li
+				figure
+					img(src="/photo1.jpg" alt="")
+					figcaption Lorem Ipsum
+			li
+				figure
+					img(src="/photo2.jpg" alt="")
+					figcaption Lorem Ipsum
+			li
+				figure
+					img(src="/photo3.jpg" alt="")
+					figcaption Lorem Ipsum
+			li
+				figure
+					img(src="/photo4.jpg" alt="")
+					figcaption Lorem Ipsum
+			li
+				figure
+					img(src="/photo5.jpg" alt="")
+					figcaption Lorem Ipsum
+			li
+				figure
+					img(src="/photo6.jpg" alt="")
+					figcaption Lorem Ipsum
+			li
+				figure
+					img(src="/photo7.jpg" alt="")
+					figcaption Lorem Ipsum
+			li
+				figure
+					img(src="/photo8.jpg" alt="")
+					figcaption Lorem Ipsum
+			li
+				figure
+					img(src="/photo9.jpg" alt="")
+					figcaption Lorem Ipsum
+			li
+				figure
+					img(src="/photo10.jpg" alt="")
+					figcaption Lorem Ipsum
+
+		nav
+			ul
+				li
+					a
+						img(src="/photo1.jpg" alt="")
+				li
+					a
+						img(src="/photo2.jpg" alt="")
+				li
+					a
+						img(src="/photo3.jpg" alt="")
+				li
+					a
+						img(src="/photo4.jpg" alt="")
+				li
+					a
+						img(src="/photo5.jpg" alt="")
+				li
+					a
+						img(src="/photo6.jpg" alt="")
+				li
+					a
+						img(src="/photo7.jpg" alt="")
+				li
+					a
+						img(src="/photo8.jpg" alt="")
+				li
+					a
+						img(src="/photo9.jpg" alt="")
+				li
+					a
+						img(src="/photo10.jpg" alt="")
+
+		.options
+			.option
+			.option
+			.option
+			.option
+			.option
