Added susy for layout

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -7,7 +7,7 @@ block content
 			p Las Vegas, USA
 			p Aéreo de 7 Cidades + Hotel em Vegas
 
-		ul
+		ul.gallery
 			li
 				figure
 					img(src="/photo1.jpg" alt="")
@@ -49,7 +49,7 @@ block content
 					img(src="/photo10.jpg" alt="")
 					figcaption Lorem Ipsum
 
-		nav
+		nav.gallery-nav
 			ul
 				li
 					a
