--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -3,84 +3,84 @@ extends ./layout.jade
 block content
 	.container
 		header
-			h1 Hotel Circus Circus Hotel & Casino Resort
-			p Las Vegas, USA
-			p Aéreo de 7 Cidades + Hotel em Vegas
+			h1.offer-title Hotel Circus Circus Hotel & Casino Resort
+			p.offer-subtitle.bold Las Vegas, USA
+			p.offer-subtitle Aéreo de 7 Cidades + Hotel em Vegas
 
 		ul.gallery
 			li
-				figure
-					img(src="/photo1.jpg" alt="")
-					figcaption Lorem Ipsum
+				figure.offer-fig
+					img(src="/photo1.jpg" alt="" width="940px" height="370px")
+					figcaption.offer-figcap Exterior do Hotel
 			li
-				figure
-					img(src="/photo2.jpg" alt="")
-					figcaption Lorem Ipsum
+				figure.offer-fig
+					img(src="/photo2.jpg" alt="" width="940px" height="370px")
+					figcaption.offer-figcap Exterior do Hotel
 			li
-				figure
-					img(src="/photo3.jpg" alt="")
-					figcaption Lorem Ipsum
+				figure.offer-fig
+					img(src="/photo3.jpg" alt="" width="940px" height="370px")
+					figcaption.offer-figcap Exterior do Hotel
 			li
-				figure
-					img(src="/photo4.jpg" alt="")
-					figcaption Lorem Ipsum
+				figure.offer-fig
+					img(src="/photo4.jpg" alt="" width="940px" height="370px")
+					figcaption.offer-figcap Exterior do Hotel
 			li
-				figure
-					img(src="/photo5.jpg" alt="")
-					figcaption Lorem Ipsum
+				figure.offer-fig
+					img(src="/photo5.jpg" alt="" width="940px" height="370px")
+					figcaption.offer-figcap Exterior do Hotel
 			li
-				figure
-					img(src="/photo6.jpg" alt="")
-					figcaption Lorem Ipsum
+				figure.offer-fig
+					img(src="/photo6.jpg" alt="" width="940px" height="370px")
+					figcaption.offer-figcap Exterior do Hotel
 			li
-				figure
-					img(src="/photo7.jpg" alt="")
-					figcaption Lorem Ipsum
+				figure.offer-fig
+					img(src="/photo7.jpg" alt="" width="940px" height="370px")
+					figcaption.offer-figcap Exterior do Hotel
 			li
-				figure
-					img(src="/photo8.jpg" alt="")
-					figcaption Lorem Ipsum
+				figure.offer-fig
+					img(src="/photo8.jpg" alt="" width="940px" height="370px")
+					figcaption.offer-figcap Exterior do Hotel
 			li
-				figure
-					img(src="/photo9.jpg" alt="")
-					figcaption Lorem Ipsum
+				figure.offer-fig
+					img(src="/photo9.jpg" alt="" width="940px" height="370px")
+					figcaption.offer-figcap Exterior do Hotel
 			li
-				figure
-					img(src="/photo10.jpg" alt="")
-					figcaption Lorem Ipsum
+				figure.offer-fig
+					img(src="/photo10.jpg" alt="" width="940px" height="370px")
+					figcaption.offer-figcap Exterior do Hotel
 
 		nav.gallery-nav
 			ul
 				li
 					a
-						img(src="/photo1.jpg" alt="")
+						img(src="/photo1.jpg" alt="" width="90px" height="60px")
 				li
 					a
-						img(src="/photo2.jpg" alt="")
+						img(src="/photo2.jpg" alt="" width="90px" height="60px")
 				li
 					a
-						img(src="/photo3.jpg" alt="")
+						img(src="/photo3.jpg" alt="" width="90px" height="60px")
 				li
 					a
-						img(src="/photo4.jpg" alt="")
+						img(src="/photo4.jpg" alt="" width="90px" height="60px")
 				li
 					a
-						img(src="/photo5.jpg" alt="")
+						img(src="/photo5.jpg" alt="" width="90px" height="60px")
 				li
 					a
-						img(src="/photo6.jpg" alt="")
+						img(src="/photo6.jpg" alt="" width="90px" height="60px")
 				li
 					a
-						img(src="/photo7.jpg" alt="")
+						img(src="/photo7.jpg" alt="" width="90px" height="60px")
 				li
 					a
-						img(src="/photo8.jpg" alt="")
+						img(src="/photo8.jpg" alt="" width="90px" height="60px")
 				li
 					a
-						img(src="/photo9.jpg" alt="")
+						img(src="/photo9.jpg" alt="" width="90px" height="60px")
 				li
 					a
-						img(src="/photo10.jpg" alt="")
+						img(src="/photo10.jpg" alt="" width="90px" height="60px")
 
 		.options
 			.option
