--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,6 +2,14 @@
 
 @import "reset";
 
+*, *:before, *:after {
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+}
+
+$font-stack: 'Arial Rounded MT Bold','Helvetica Rounded',Arial,sans-serif;
+
 .container {
 	@include container(940px);
 }
@@ -9,4 +17,50 @@
 img {
 	display: block;
 	max-width: 100%;
+}
+
+.offer-title {
+	font-family: $font-stack;
+	font-size: 29px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: bold;
+	line-height: 26.4px;
+	letter-spacing: 3px;
+	color: #323232;
+	margin-bottom: 6px;
+}
+
+.offer-subtitle {
+	font-family: $font-stack;
+	font-size: 14px;
+	line-height: 14px;
+
+	&.bold {
+		font-weight: bold;
+		margin-bottom: 7px;
+	}
+}
+
+header {
+	margin-top: 46px;
+	margin-bottom: 72px;
+}
+
+.offer-fig {
+	position: relative;
+}
+
+.offer-figcap {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	color: #fff;
+	font-family: $font-stack;
+	letter-spacing: 1px;
+	width: 100%;
+	height: 70px;
+	padding: 0 9px;
+	line-height: 70px;
+	background: rgba(0, 0, 0, 0.5);
 }
