Added first crousel

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -7,7 +7,7 @@ block content
 			p.offer-subtitle.bold Las Vegas, USA
 			p.offer-subtitle Aéreo de 7 Cidades + Hotel em Vegas
 
-		ul.gallery
+		ul.gallery#gallery
 			li
 				figure.offer-fig
 					img(src="/photo1.jpg" alt="" width="940px" height="370px")
