--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,6 @@
 @import "../../node_modules/susy/sass/susy";
+@import "../../node_modules/slick-carousel/slick/slick.scss";
+@import "../../node_modules/slick-carousel/slick/slick-theme.scss";
 
 @import "reset";
 
