--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -7,84 +7,192 @@ block content
 			p.offer-subtitle.bold Las Vegas, USA
 			p.offer-subtitle Aéreo de 7 Cidades + Hotel em Vegas
 
-		ul.gallery#gallery
-			li
-				figure.offer-fig
-					img(src="/photo1.jpg" alt="" width="940px" height="370px")
-					figcaption.offer-figcap Exterior do Hotel
-			li
-				figure.offer-fig
-					img(src="/photo2.jpg" alt="" width="940px" height="370px")
-					figcaption.offer-figcap Exterior do Hotel
-			li
-				figure.offer-fig
-					img(src="/photo3.jpg" alt="" width="940px" height="370px")
-					figcaption.offer-figcap Exterior do Hotel
-			li
-				figure.offer-fig
-					img(src="/photo4.jpg" alt="" width="940px" height="370px")
-					figcaption.offer-figcap Exterior do Hotel
-			li
-				figure.offer-fig
-					img(src="/photo5.jpg" alt="" width="940px" height="370px")
-					figcaption.offer-figcap Exterior do Hotel
-			li
-				figure.offer-fig
-					img(src="/photo6.jpg" alt="" width="940px" height="370px")
-					figcaption.offer-figcap Exterior do Hotel
-			li
-				figure.offer-fig
-					img(src="/photo7.jpg" alt="" width="940px" height="370px")
-					figcaption.offer-figcap Exterior do Hotel
-			li
-				figure.offer-fig
-					img(src="/photo8.jpg" alt="" width="940px" height="370px")
-					figcaption.offer-figcap Exterior do Hotel
-			li
-				figure.offer-fig
-					img(src="/photo9.jpg" alt="" width="940px" height="370px")
-					figcaption.offer-figcap Exterior do Hotel
-			li
-				figure.offer-fig
-					img(src="/photo10.jpg" alt="" width="940px" height="370px")
-					figcaption.offer-figcap Exterior do Hotel
+		section.gallery-section
+			ul.gallery#gallery
+				li
+					figure.offer-fig
+						img(src="/photo1.jpg" alt="" width="940px" height="370px")
+						figcaption.offer-figcap Exterior do Hotel
+				li
+					figure.offer-fig
+						img(src="/photo2.jpg" alt="" width="940px" height="370px")
+						figcaption.offer-figcap Exterior do Hotel
+				li
+					figure.offer-fig
+						img(src="/photo3.jpg" alt="" width="940px" height="370px")
+						figcaption.offer-figcap Exterior do Hotel
+				li
+					figure.offer-fig
+						img(src="/photo4.jpg" alt="" width="940px" height="370px")
+						figcaption.offer-figcap Exterior do Hotel
+				li
+					figure.offer-fig
+						img(src="/photo5.jpg" alt="" width="940px" height="370px")
+						figcaption.offer-figcap Exterior do Hotel
+				li
+					figure.offer-fig
+						img(src="/photo6.jpg" alt="" width="940px" height="370px")
+						figcaption.offer-figcap Exterior do Hotel
+				li
+					figure.offer-fig
+						img(src="/photo7.jpg" alt="" width="940px" height="370px")
+						figcaption.offer-figcap Exterior do Hotel
+				li
+					figure.offer-fig
+						img(src="/photo8.jpg" alt="" width="940px" height="370px")
+						figcaption.offer-figcap Exterior do Hotel
+				li
+					figure.offer-fig
+						img(src="/photo9.jpg" alt="" width="940px" height="370px")
+						figcaption.offer-figcap Exterior do Hotel
+				li
+					figure.offer-fig
+						img(src="/photo10.jpg" alt="" width="940px" height="370px")
+						figcaption.offer-figcap Exterior do Hotel
 
-		nav.gallery-nav
-			ul
-				li
-					a
-						img(src="/photo1.jpg" alt="" width="90px" height="60px")
-				li
-					a
-						img(src="/photo2.jpg" alt="" width="90px" height="60px")
-				li
-					a
-						img(src="/photo3.jpg" alt="" width="90px" height="60px")
-				li
-					a
-						img(src="/photo4.jpg" alt="" width="90px" height="60px")
-				li
-					a
-						img(src="/photo5.jpg" alt="" width="90px" height="60px")
-				li
-					a
-						img(src="/photo6.jpg" alt="" width="90px" height="60px")
-				li
-					a
-						img(src="/photo7.jpg" alt="" width="90px" height="60px")
-				li
-					a
-						img(src="/photo8.jpg" alt="" width="90px" height="60px")
-				li
-					a
-						img(src="/photo9.jpg" alt="" width="90px" height="60px")
-				li
-					a
-						img(src="/photo10.jpg" alt="" width="90px" height="60px")
+			nav.gallery-nav
+				ul#gallery-nav
+					li
+						a
+							img(src="/photo1.jpg" alt="" width="90px" height="60px")
+					li
+						a
+							img(src="/photo2.jpg" alt="" width="90px" height="60px")
+					li
+						a
+							img(src="/photo3.jpg" alt="" width="90px" height="60px")
+					li
+						a
+							img(src="/photo4.jpg" alt="" width="90px" height="60px")
+					li
+						a
+							img(src="/photo5.jpg" alt="" width="90px" height="60px")
+					li
+						a
+							img(src="/photo6.jpg" alt="" width="90px" height="60px")
+					li
+						a
+							img(src="/photo7.jpg" alt="" width="90px" height="60px")
+					li
+						a
+							img(src="/photo8.jpg" alt="" width="90px" height="60px")
+					li
+						a
+							img(src="/photo9.jpg" alt="" width="90px" height="60px")
+					li
+						a
+							img(src="/photo10.jpg" alt="" width="90px" height="60px")
 
-		.options
-			.option
-			.option
-			.option
-			.option
-			.option
+		section
+			nav.options-header
+				h2.options-title Escolha sua melhor opção
+				.options-controls
+					div.options-control
+						label(for="saida").options-control-label Saídas
+						select.options-control-select#saida
+							option Escolha
+					div.options-control
+						label.options-control-label(for="n-diarias") Nº de diárias
+						select.options-control-select.diarias#n-diarias
+							option Escolha
+			.options
+				.option
+					.col1
+						h3.option-title Noites em Lisboa + Noites em Veneza
+						p.option-texto Atenção quarto duplo é necessário adquirir 2 pacotes
+					.col2
+						p.option-title.saidas
+							strong Saídas:
+						p.option-texto Manaus
+					.col3
+						p.numero-destaque 3 <i class="diaria">
+						p Diárias
+						hr
+						p.numero-destaque 1 <i class="pessoa">
+						p Pessoa
+					.col4
+						p $ Tarifa não reembolsável
+						p.option-texto Por apenas:
+						p R$ <strong>2.549</strong>
+						p.option-texto + taxas em até 10x
+						button Quero ir
+				.option
+					.col1
+						h3 Noites em Lisboa + Noites em Veneza
+						p Atenção quarto duplo é necessário adquirir 2 pacotes
+					.col2
+						p
+							strong Saídas:
+						p Manaus
+					.col3
+						p 3 <i class="diaria">
+						p Diárias
+						hr
+						p 1 <i class="pessoa">
+						p Pessoa
+					.col4
+						p $ Tarifa não reembolsável
+						p Por apenas:
+						p R$ <strong>2.549</strong>
+						p + taxas em até 10x
+						button Quero ir
+				.option
+					.col1
+						h3 Noites em Lisboa + Noites em Veneza
+						p Atenção quarto duplo é necessário adquirir 2 pacotes
+					.col2
+						p
+							strong Saídas:
+						p Manaus
+					.col3
+						p 3 <i class="diaria">
+						p Diárias
+						hr
+						p 1 <i class="pessoa">
+						p Pessoa
+					.col4
+						p $ Tarifa não reembolsável
+						p Por apenas:
+						p R$ <strong>2.549</strong>
+						p + taxas em até 10x
+						button Quero ir
+				.option
+					.col1
+						h3 Noites em Lisboa + Noites em Veneza
+						p Atenção quarto duplo é necessário adquirir 2 pacotes
+					.col2
+						p
+							strong Saídas:
+						p Manaus
+					.col3
+						p 3 <i class="diaria">
+						p Diárias
+						hr
+						p 1 <i class="pessoa">
+						p Pessoa
+					.col4
+						p $ Tarifa não reembolsável
+						p Por apenas:
+						p R$ <strong>2.549</strong>
+						p + taxas em até 10x
+						button Quero ir
+				.option
+					.col1
+						h3 Noites em Lisboa + Noites em Veneza
+						p Atenção quarto duplo é necessário adquirir 2 pacotes
+					.col2
+						p
+							strong Saídas:
+						p Manaus
+					.col3
+						p 3 <i class="diaria">
+						p Diárias
+						hr
+						p 1 <i class="pessoa">
+						p Pessoa
+					.col4
+						p $ Tarifa não reembolsável
+						p Por apenas:
+						p R$ <strong>2.549</strong>
+						p + taxas em até 10x
+						button Quero ir
