Added express structure

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -3,7 +3,8 @@ extends ./layout.jade
 block content
 	.container
 		header
-			h1.offer-title Hotel Circus Circus Hotel & Casino Resort
+			//Hotel Circus Circus Hotel & Casino Resort
+			h1.offer-title= tit Hotel Circus Circus Hotel & Casino Resort
 			p.offer-subtitle.bold Las Vegas, USA
 			p.offer-subtitle Aéreo de 7 Cidades + Hotel em Vegas
 
