--- a/src/jade/layout.jade
+++ b/src/jade/layout.jade
@@ -2,6 +2,7 @@ doctype html
 html
 	head
 		meta(name="viewport" content="width=device-width")
+		link(href="/assets/css/main.css" type="text/css" rel="stylesheet")
 		if dev
 			link(href="/assets/css/main.css" type="text/css" rel="stylesheet")
 		else
@@ -9,6 +10,7 @@ html
 	body
 		block content
 
+		script(src="/assets/js/main.js")
 		if dev
 			script(src="/assets/js/main.js")
 		else
