--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,4 +6,6 @@ html
 		link(href="/assets/css/main.css" type="text/css" rel="stylesheet")
 	body
 		block content
+		script.
+			var offerId = #{id};
 		script(src="/assets/js/main.js")
