--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,5 @@
 @import "../../node_modules/susy/sass/susy";
 @import "../../node_modules/slick-carousel/slick/slick.scss";
-@import "../../node_modules/slick-carousel/slick/slick-theme.scss";
 
 @import "reset";
 
@@ -74,12 +73,36 @@ header {
 	background: rgba(0, 0, 0, 0.5);
 }
 
-.gallery-nav .slick-current {
-	opacity: .5;
-}
-
 .gallery {
 	margin-bottom: 5px;
+	position: relative;
+}
+
+.slick-arrow {
+	position: absolute;
+	top: 50%;
+	z-index: 1;
+	width: 45px;
+	height: 70px;
+	margin-top: -35px;
+	border: none;
+	background: rgba(0, 0, 0, .5);
+	color: #f2eaf5;
+	font-size: 25px;
+	font-family: $font-stack;
+	background-repeat: no-repeat;
+	background-position: center center;
+	cursor: pointer;
+}
+
+.slick-prev {
+	left: 0;
+	background-image: url(../../icons/slick-prev.png);
+}
+
+.slick-next {
+	right: 0;
+	background-image: url(../../icons/slick-next.png);
 }
 
 .gallery-section {
@@ -88,6 +111,21 @@ header {
 
 .gallery-thumbs {
 	overflow: hidden;
+}
+
+.photosLenght {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(255, 122, 1, .8);
+	font-family: $font-stack;
+	font-size: 30px;
+	line-height: 60px;
+	color: #fff;
+	text-align: center;
+	cursor: pointer;
 }
 
 .gallery-section img {
@@ -104,10 +142,11 @@ $gallerylayout: (
 .gallery-thumb {
 	float: left;
 	@include span(1 of 10);
-}
 
-.gallery-thumb-last {
-	margin-right: 0;
+	&.last {
+		margin-right: 0;
+		position: relative;
+	}
 }
 
 @import "options";
