Added gallery pagination

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,163 +1,14 @@
-@import "../../node_modules/susy/sass/susy";
-@import "../../node_modules/slick-carousel/slick/slick.scss";
-
-@import "reset";
-
-*, *:before, *:after {
-    -webkit-box-sizing: border-box;
-       -moz-box-sizing: border-box;
-            box-sizing: border-box;
-}
-
-$font-stack: Arial, 'Helvetica Neue', Helvetica, sans-serif;
-
-// cores
-$cinza-claro: #666666;
-$cinza-borda: #e4e4e4;
+$font-stack: 	Arial, 'Helvetica Neue', Helvetica, sans-serif;
+$cinza-claro: 	#666666;
+$cinza-borda: 	#e4e4e4;
 $laranja-borda: #fab23c;
 $strong-orange: #ff7a01;
-$green: #3bad00;
+$green: 		#3bad00;
 
-.container {
-	@include container(940px);
-}
-
-img {
-	display: block;
-	max-width: 100%;
-}
-
-.offer-title {
-	font-family: $font-stack;
-	font-size: 29px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: bold;
-	line-height: 26.4px;
-	letter-spacing: 3px;
-	color: #323232;
-	margin-bottom: 6px;
-}
-
-.offer-subtitle {
-	font-family: $font-stack;
-	font-size: 14px;
-	line-height: 14px;
-
-	&.bold {
-		font-weight: bold;
-		margin-bottom: 7px;
-	}
-}
-
-header {
-	margin-top: 46px;
-	margin-bottom: 72px;
-}
-
-.offer-fig {
-	position: relative;
-}
-
-.offer-figcap {
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	color: #fff;
-	font-family: $font-stack;
-	letter-spacing: 1px;
-	width: 100%;
-	height: 70px;
-	padding: 0 9px;
-	line-height: 70px;
-	background: rgba(0, 0, 0, 0.5);
-}
-
-.gallery {
-	margin-bottom: 5px;
-	position: relative;
-}
-
-.slick-arrow {
-	position: absolute;
-	top: 50%;
-	z-index: 1;
-	width: 45px;
-	height: 70px;
-	margin-top: -35px;
-	border: none;
-	background: rgba(0, 0, 0, .5);
-	color: #f2eaf5;
-	font-size: 25px;
-	font-family: $font-stack;
-	background-repeat: no-repeat;
-	background-position: center center;
-	cursor: pointer;
-}
-
-.slick-prev {
-	left: 0;
-	background-image: url(../../icons/slick-prev.png);
-}
-
-.slick-next {
-	right: 0;
-	background-image: url(../../icons/slick-next.png);
-}
-
-.gallery-section {
-	margin-bottom: 59px;
-}
-
-.gallery-thumbs {
-	overflow: hidden;
-}
-
-.photosLenght {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: rgba(255, 122, 1, .8);
-	font-family: $font-stack;
-	font-size: 30px;
-	line-height: 60px;
-	color: #fff;
-	text-align: center;
-	cursor: pointer;
-}
-
-.gallery-section img {
-    object-fit: cover;
-}
-
-.fullscreen {
-	background-color: $preto;
-	display: none;
-	height: 100vh;
-	position: fixed;
-	width: 100%;
-	z-index: 999;
-	top: 0;
-	left: 0;
-}
-
-$gallerylayout: (
-	columns: 10,
-	gutters: 4px/90px,
-);
-
-@include layout($gallerylayout);
-
-.gallery-thumb {
-	float: left;
-	@include span(1 of 10);
-
-	&.last {
-		margin-right: 0;
-		position: relative;
-	}
-}
-
+@import "../../node_modules/susy/sass/susy";
+@import "../../node_modules/slick-carousel/slick/slick.scss";
+@import "reset";
+@import "base";
+@import "page";
+@import "gallery";
 @import "options";
