--- a/src/sass/_options.scss
+++ b/src/sass/_options.scss
@@ -49,7 +49,7 @@
 	border: 1px solid $cinza-borda;
 	border-radius: 1px;
     box-shadow: 1px 1px 7px -2px rgba(0, 0, 0, .3);
-    margin: 1px 0 2px;
+    margin: 1px 2px 2px 0;
     background-color: #fff;
     font-size: 12px;
 
