--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -21,6 +21,14 @@
 	position: relative;
 	height: 370px;
 	overflow: hidden;
+
+	&.modal {
+		height: 100%;
+
+		img {
+			object-fit: contain;
+		}
+	}
 }
 
 .slick-arrow {
@@ -88,6 +96,29 @@
 	z-index: 999;
 	top: 0;
 	left: 0;
+	display: none;
+
+	&.open {
+		display: block;
+	}
+}
+
+.gallery-modal-container {
+	height: 100vh;
+
+	.slick-slider .slick-track, 
+	.slick-slider .slick-list {
+		height: 100%;
+	}
+}
+
+.gallery-nav-modal {
+	width: 100%;
+	overflow: hidden;
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	height: 60px;
 }
 
 .modal-gallery-close {
@@ -133,4 +164,78 @@ $gallerylayout: (
 	overflow: hidden;
 	position: relative;
 	height: 60px;
+}
+
+.photo-modal {
+	background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+.out-of-view {
+	opacity: .1;
+}
+
+/* Dots */
+
+.slick-slider {
+    margin-bottom: 30px;
+}
+
+.slick-dots {
+    position: absolute;
+    bottom: 10px;
+    list-style: none;
+    display: block;
+    text-align: center;
+    padding: 0;
+    width: 100%;
+    li {
+        position: relative;
+        display: inline-block;
+        height: 20px;
+        width: 20px;
+        margin: 0 5px;
+        padding: 0;
+        cursor: pointer;
+        button {
+            border: 0;
+            background: transparent;
+            display: block;
+            height: 20px;
+            width: 20px;
+            outline: none;
+            line-height: 0px;
+            font-size: 0px;
+            color: transparent;
+            padding: 5px;
+            cursor: pointer;
+            &:hover, &:focus {
+                outline: none;
+                &:before {
+                    opacity: .8;
+                }
+            }
+            &:before {
+                position: absolute;
+                top: 0;
+                left: 0;
+                content: '•';
+                width: 20px;
+                height: 20px;
+                font-family: $font-stack;
+                font-size: 30px;
+                line-height: 20px;
+                text-align: center;
+                color: $strong-orange;
+                opacity: .2;
+                -webkit-font-smoothing: antialiased;
+                -moz-osx-font-smoothing: grayscale;
+            }
+        }
+        &.slick-active button:before {
+            color: $strong-orange;
+            opacity: 1;
+        }
+    }
 }
