--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,5 @@
 $font-stack: 	Arial, 'Helvetica Neue', Helvetica, sans-serif;
+$gotham:        'Gotham', $font-stack;
 $cinza-claro: 	#666666;
 $cinza-borda: 	#e4e4e4;
 $laranja-borda: #fab23c;
