--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html
 	head
 		//-title= title
 		meta(name="viewport" content="width=device-width")
+		link(href="/assets/css/styleguide.css" type="text/css" rel="stylesheet")
 		link(href="/assets/css/main.css" type="text/css" rel="stylesheet")
 	body
 		block content
