--- a/src/sass/styleguide.scss
+++ b/src/sass/styleguide.scss
@@ -26,3 +26,46 @@
     font-weight: 700;
     font-style: normal
 }
+
+@import "../../node_modules/slick-carousel/slick/slick.scss";
+@import "../../node_modules/select2/dist/css/select2";
+
+.select2-container--default .select2-selection--single {
+    border: 1px solid #e4e4e4;
+    border-radius: 1px;
+    box-shadow: 1px 1px 7px -2px rgba(0, 0, 0, .3);
+    background-color: #fff;
+    //font-size: 12px;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    color: #444;
+    font-size: 12.1px;
+    padding-left: 4px;
+    line-height: 25px;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+    width: 22px;
+    border-left: 1px solid #e4e4e4;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow b {
+    top: 50%;
+    right: 5px;
+    border: solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+    border-color: rgba(255,121,0,0);
+    border-top-color: #ff8a21;
+    border-width: 4px;
+    margin-left: -5px;
+    margin-top: -2.5px;
+}
+
+.container {
+    font-family: 'Gotham', Arial, 'Helvetica Neue', Helvetica, sans-serif;
+}
