--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -6,14 +6,15 @@
 	position: absolute;
 	bottom: 0;
 	left: 0;
-	color: #fff;
-	font-family: $font-stack;
-	letter-spacing: 1px;
+	color: #F1EEEE;
+	font-family: inherit;
+	letter-spacing: 0.1px;
 	width: 100%;
 	height: 70px;
 	padding: 0 9px;
 	line-height: 70px;
 	background: rgba(0, 0, 0, 0.5);
+    font-weight: lighter;
 }
 
 .gallery-section .gallery {
@@ -75,12 +76,13 @@
 	width: 100%;
 	height: 100%;
 	background: rgba(255, 122, 1, .8);
-	font-family: $font-stack;
-	font-size: 30px;
+	font-family: inherit;
+	font-size: 32px;
 	line-height: 60px;
 	color: #fff;
 	text-align: center;
 	cursor: pointer;
+    font-weight: lighter;
 }
 
 .gallery-section img {
